armistice of focsani

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5561,7 +5561,7 @@ ROM_voice_of_the_farmer:0 "The Voice of the Farmer"
 ROM_just_to_bide_time:0 "Just To Bide Time"
 ROM_friends_from_junimea:0 "Friends from Junimea"
 ROM_abandon_federalism:0 "Abandon Federalism"
-ROM_jewish_emancipation:0 "Exodus to Romania" #stretch? can change
+ROM_jewish_emancipation:0 "Exodus to Romania" 
 ROM_the_propaganda_machine:0 "The Propaganda Machine"
 ROM_the_natural_enemy:0 "The Natural Enemy"
 ROM_the_natural_enemy_desc:0 "For too long, the Russian Bear has loomed over our nation, disrupting our aspirations and threatening our sovereignty. Their interference in our affairs and disregard for Romanian borders has made them our natural enemy. It is time to settle the score and head to war. The Tsar's grip must be broken, and the Russian menace must be confronted head-on."
@@ -5695,6 +5695,8 @@ ROM_building_a_domestic_arms_industry:0 "Build a Domestic Arms Industry"
 ww1_romania.74.t:0 "Defeat in the War"
 ww1_romania.74.desc:0 "Unfortunately for us, we have not managed to snatch the victory in the Great War, so we now have to pay debts to the victors."
 ww1_romania.74.a:0 "What will the people say?"
+ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania now exits the war."
+ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
 
 
 
