--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9329,6 +9329,11 @@ FRA_salary_limitation_act:0 "Salary Limitation Act"
 FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
 
 #Romania
+ROM_national_opposition:0 "National Opposition"
+ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: §Rinfluential§!, in §Ropposition§! to §YCarp§!\n\nThe §rPDSR§! is currently: §Galigned§! with §YCarp§!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe peasants are currently: generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
+
+
+
 king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\n£political_power_texticon Daily Political Power Gain: §Y+0.00§!\n£stability_texticon Stability: §Y+0.00%§!"
 king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\n£political_power_texticon Political Power Gain: §G+20%§!\n£stability_texticon Stability: §G+12.00%§!"
 ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
