house always wins branch done

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5215,6 +5215,7 @@ ROM_geniocracy_desc:0 ""
 ROM_install_a_royal_dictatorship:0 "The Kings Government"
 ROM_install_a_royal_dictatorship_desc:0 "The time for limited parliamentarianism in Romania has ended. King Carol and his advisors have assumed the vessels of government from the political parties, finally through with their squabbling. What this means for Romania is anyone's guess."
 ROM_pragmatic_politics:0 "Reunion of the Conservative Parties"
+ROM_pragmatic_politics_desc:0 "The PCD and the PD have long since held policies not too far from each other, yet far enough to be opposed. Let this not be the case any longer. The PCD has assumed powers unlike any party before it, realistically the only hope for the survival of the PC is to merge with the PCD. Let this be the case forevermore."
 ROM_the_second_great_disaster:0 "The Second Great Disaster"
 ROM_the_second_great_disaster_desc:0 "A second peasant's revolt has befell our nation, with just as much significance as the last. The King is furious with parliament to the degree where he may just dismiss the current government and not summon another one."
 ROM_fuse_nationalism_and_literacy:0 "Fuse Nationalism and Literacy"
@@ -5591,6 +5592,7 @@ ROM_lessons_from_denmark:0 "Lessons From Denmark"
 ROM_peasants_democracy:0 "Peasants' Democracy"
 ROM_encourage_jobs_in_the_war_industry:0 "Hire in the War Industry"
 ROM_de_polarization:0 "Depolarization"
+ROM_de_polarization_desc:0 "Why must everyone be an ultra-nationalist or a Marxist? Why can't we all get along, hold hands, and sing together in a poppy field? There must be something we can do to make everyone nice to each other! Well, for a start, we can politically disenfranchise polarizing individuals and promote interparty cooperation. Everyone will be happy, or else!"
 ROM_transition_towards_a_socialist_economy:0 "Transition to a Socialist Economy"
 ROM_alliance_with_the_pdsr:0 "Alliance with the PDSR"
 ROM_invite_french_socialists:0 "Invite French Socialists"
@@ -5612,7 +5614,7 @@ ww1_romania.65.t:0 "The Great War is Over!"
 ww1_romania.65.desc:0 "The Great War, a war that ravaged Europe for many years, is finally over!"
 ww1_romania.65.a:0 "Finally, let's move on."
 ROM_investigate_bureaucratic_corruption:0 "Investigate Bureaucratic Corruption"
-ROM_investigate_bureaucratic_corruption_desc:0 ""
+ROM_investigate_bureaucratic_corruption_desc:0 "While the rotation of parties had its benefits, it cannot be ignored how it enabled corruption. Power is a dangerous drug, with some willing to go the distance in order to keep ahold of it. We must get to the roots of these cases. No longer will our government be tarnished by cases of corruption, for we seek to eradicate it utterly."
 ww1_romania.66.t:0 "The Enescu Prize"
 ww1_romania.66.desc:0 "Romania's cultural scene is thriving, with its young talents eager to make their mark. Renowned composer George Enescu established the Enescu Prize this year, a prestigious award to recognize the most promising Romanian composers of our time. The event gathered the cultural elite at Bucharest, to celebrate local music and hyping up Romanian pride. This year's winner was Ion Nonna Otescu."
 ww1_romania.66.a:0 "They are all making Romania proud."
@@ -5620,12 +5622,13 @@ ROM_alexandru_c_cuza:0 "Alexandru Constantin Cuza"
 ROM_reduce_trade_barriers_with_germany:0 "Reduce Trade Barriers with Germany"
 ROM_reduce_trade_barriers_with_germany_desc:0 "The previous civilian government was hesitant to engage in broader trade with Germany. This was a mistake and it has cost us great growth. Now though, now we can make amends for this and lower tariffs to incentivize German investment. Our populace may disagree, but this is the best course for Romania."
 ROM_de_politicize_key_cabinet_positions:0 "Depoliticize Key Cabinet Positions"
-ROM_de_politicize_key_cabinet_positions_desc:0 ""
+ROM_de_politicize_key_cabinet_positions_desc:0 "Partisan politics often dictate who the government must select as candidates for the cabinet. It shouldn't be decided by clout, but rather by ability. Making these positions strictly meritocratic will give the country more assurance that their government isn't simply twiddling their thumbs, but actually doing their best to improve the lives of the commonfolk."
 this_wont_do_anything_if_completed_jewish_focus_tt:0 "§RThis focus will not have any effects if §R§YExodus to Romania§Y§R or §R§YSafe Haven for Jews§Y§R are completed.§R§W"
 this_wont_do_anything_if_completed_male_suffrage_focus_tt:0 "§RThis focus give you the National Spirit if the focus '§R§YPursue Full Male Suffrage§Y§R' is completed.§R§W"
 ROM_end_antisemitism:0 "Address our Past"
 ROM_end_antisemitism_desc:0 ""
 ROM_grand_coalition:0 "Grand Coalition"
+ROM_grand_coalition_desc:0 "The time has come to put aside ideology in favor of complete and absolute loyalty to king and nation. The parties already proclaim themselves as such, however they certaintly don't show it. To address this lack of motivation to make the lives of their constituents better, the King has proclaimed the need to form a Grand Coalition headed by the PCD. Parliament is almost certain to accept, increasing the people's confidence in their governance."
 ROM_support_romanian_literature:0 "Support Romanian Literature"
 ROM_support_romanian_literature_desc:0 "Romanian writing is an untapped goldmine. The novelists and poets that sit impoverished in Bucharest apartments need a helping hand, as their writings are worth more than any money we could provide them. The time for a cultural revival is nigh, and the artists of our nation will light the way."
 ROM_fight_illiteracy:0 "Fight Illiteracy"
@@ -5643,7 +5646,7 @@ ROM_discipline_the_army:0 "Our Prussian King has decided to take the next step i
 ROM_tighten_our_grip:0 "Tighten Our Grip"
 ROM_tighten_our_grip_desc:0 "King Carol have made heavy strides in his new form of governance, with these strides indicating positive results. There are steps that could be taken to further entrench our regime, the only obstacle to those steps are the King's word."
 ROM_expanding_our_majority_in_parliament:0 "Expand our Majority in Parliament"
-ROM_expanding_our_majority_in_parliament_desc:0 "The success of the party in head of government has made ripples in Romanian society. Any election called now would surely result in a landslide for their candidates. Perhaps that is exactly the move to make."
+ROM_expanding_our_majority_in_parliament_desc:0 "The success of the party in charge of government has made ripples in Romanian society. Any election called now would surely result in a landslide for their candidates. Perhaps that is exactly the move to make."
 ROM_this_will_have_better_effects_after_tt:0 "§RThis national spirit will give better effects after it expires.§R§W"
 empty_space_tt:0 " \n"
 ROM_enforce_fiscal_sustainability:0 "Enforce Fiscal Sustainability"
