--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10275,6 +10275,13 @@ kis_news.146.c:0 "Hello to our new ally!"
 kis_news.146.d:0 "Was this worth it?"
 kis_news.146.e:0 "Hopefully we survive in here."
 
+kis_news.147.t:0 "[ROM.GetName] signs an armistice!"
+kis_news.147.desc:0 "[ROM.GetName]'s government has come out with a statement saying that it can no longer fight in the Great War, and that they're backing out. They've signed a white peace with [AUH.GetName], [GER.GetName] and [BUL.GetName] in exchange of territory."
+kis_news.147.a:0 "Dark times."
+kis_news.147.b:0 "At least we survived."
+kis_news.147.c:0 "One less front to deal with."
+kis_news.147.d:0 "Pussies!"
+
  # Alternative History
  ww1_alternativehistory.1.t: "Instability and Uncertain Future in the Balkans"
  ww1_alternativehistory.1.d: "Every day, more harrowing news comes in from the Austro-Serbian border. Another German storefront with a bomb thrown in, another attack on a Hapsburg official, more vandalism, more looting. Almost all of the arrested criminals have ties to Serbia, and some even allege government instruction. Serbia has been instructed to use its military to keep the peace, but they have done no such thing, and even seem to continue urging these crimes. Kaiser Franz-Josef has sent out to the Serbian Government, demanding full military cooperation with the Austrian army until this issue is resolved."
