--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5697,7 +5697,8 @@ ww1_romania.74.desc:0 "Unfortunately for us, we have not managed to snatch the v
 ww1_romania.74.a:0 "What will the people say?"
 ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania now exits the war."
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
-
+ROM_tackle_the_core_issue:0 "Tackle the Core Issue"
+ROM_do_not_delete.tt:0 "§RDon't delete this its for future§R§W"
 
 
 
