--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -187,7 +187,7 @@
  SWI_DEF:0 "Швейцария"
  SWI_ADJ:0 "Швейцарск"
  TUR:0 "Османская Империя"
- TUR_DEF:0 "Османская Империя"
+ TUR_DEF:0 "Возвышенное Османское Государство"
  TUR_ADJ:0 "Османск"
  TUR_communism:0 "Османское Социалистическое Государство"
  TUR_communism_DEF:0 "Османское Социалистическое Государство"
@@ -352,12 +352,10 @@
  QBC_fascism:0 "Квебек"
  QBC_fascism_DEF:0 "Квебек"
  QBC_fascism_ADJ:0 "Квебекск"
- CHI_fascism:0 "Китай"
- CHI_fascism_DEF:0 "Китай"
+ CHI_fascism_DEF:0 "Китайская Республика"
  CHI_democratic:0 "Китайская Республика"
  CHI_democratic_DEF:0 "Китайская Республика"
- CHI_neutrality:0 "Китай"
- CHI_neutrality_DEF:0 "Китай"
+ CHI_neutrality_DEF:0 "Китайская Республика"
  CHI_communism:0 "Китайская Социалистическая Республика"
  CHI_communism_DEF:0 "Китайская Социалистическая Республика"
  CHI:0 "Китай"
@@ -550,6 +548,7 @@
  PRU_democratic:0 "Республика Перу"
  PRU_democratic_DEF:0 "Республика Перу"
  PRU_neutrality_DEF:0 "Республика Перу"
+ PRU_fascism_DEF:0 "Республика Перу"
  PRU_communism:0 "Революционное Перу"
  PRU_communism_DEF:0 "Революционное Перу"
  PRU:0 "Перу"
@@ -1514,14 +1513,8 @@
  CYP_fascism_DEF:1 "Кипрская Империя"
  CYP_democratic:1 "Республика Кипр"
  CYP_democratic_DEF:1 "Республика Кипр"
- CYP_neutrality:0 "Кипр"
- CYP_neutrality_DEF:0 "Кипр"
  CYP_communism:1 "Кипрская Народно-Демократическая Республика"
  CYP_communism_DEF:1 "Кипрская Народно-Демократическая Республика"
- CYP_fascism_ADJ:2 "Кипрск"
- CYP_democratic_ADJ:0 "Кипрск"
- CYP_neutrality_ADJ:0 "Кипрск"
- CYP_communism_ADJ:0 "Кипрск"
  CYP:0 "Кипр"
  CYP_DEF:0 "Кипр"
  CYP_ADJ:0 "Кипрск"
