--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -8,26 +8,26 @@
  
  #Generic WW1 
  ww1_generic.1.t: "Выборы [GetYear] года"
- ww1_generic.1.d: "В государстве [Root.GetNameDefCap] наконец-то прошли выборы. [ROOT.GetLeader] заверил население, что все аспекты голосования были честными и справедливыми, и что правительство будет уважать результаты, как и народ. \n\nПобедитель выборов уже выступил с речью перед собравшимися в столице народными массами и готов принять на себя обязанности главы государства, чего бы это ни стоило. Надежды на светлое будущее витают по всей стране, но только время покажет."
+ ww1_generic.1.d: "Почти все, кто имеет право голоса, пришли на избирательные участки, поддерживая колесо демократии еще на пару лет или, по крайней мере, до следующих выборов. Нынешняя администрация заверила народ, что при ней не будет фальсификации результатов голосования, независимо от итогов. Затем в газетах появились официальные результаты. \n\nПобедитель выборов уже выступил с речью перед собравшимися в столице массами и готов принять на себя обязанности главы государства, что бы они ни подразумевали в эти неспокойные времена. Народ приветствует его, но это далеко не все. Остается надеяться, что те, кто проиграл выборы, не будут долго горевать о своем поражении ради блага государства и народа."
  ww1_generic.1.a: "Поздравляем его."
  ww1_generic.2.t: "Пацифистские протесты!"
- ww1_generic.2.d: "На улицах наших городов звучат единые голоса, призывающие к прекращению войны. Бесчисленное количество солдат пало под пулями, газом или в окопах, и, кажется, наши избиратели уже сыты по горло. Мужчины, которые еще не были призваны в армию, маршируют вместе с женщинами, занявшими рабочие места на заводах. У них на языке только одно слово:\n\nМир.\n\nСоциалистические диверсанты используют эту ситуацию в своих целях, как они это и делают. Необходимо знать, что их обещания о мире ничего не значат, но наши люди в отчаянии прислушиваются к любому голосу, призывающему к прекращению войны. Наше правительство, и без того находящееся в плачевном состоянии из-за требований войны, находится на грани полного краха. Мы должны нанести решающий удар и покончить с этой комедией раз и навсегда."
- ww1_generic.2.a: "Победа близка. И она должна быть."
+ ww1_generic.2.d: "Наши заводы пусты. Поля тоже. В школах можно услышать, как падают значки на пол, потому что они тоже пусты. Следующий источник звука, который вы услышите, - это голос, раздающийся совсем рядом. Голос, который звучит на улицах столицы. Голос, состоящий из десятков тысяч людей, поднявшихся вместе с идеальной сплоченностью. У них на языке только одно слово: \n\nМир.\n\nНе все протестующие имеют благие намерения. Социалисты, разжигающие толпу, выкрикивают радикальные лозунги, которые вскоре подхватывает окружающая толпа. Наши министры считают, что на очереди - призыв к революции. Нам нужно вернуть этих людей на рабочие места, чтобы не допустить развала фронта. Но что им сказать, остается неизвестным. Пессимисты в нашей администрации считают, что ничего нельзя сказать, и худшее неизбежно."
+ ww1_generic.2.a: "Ничего не поделаешь, все рушится."
  ww1_generic.3.t: "Забастовки по всей стране!"
- ww1_generic.3.d: "Недовольные нынешними условиями труда, забастовщики организовали марш, которому подражают по всей стране. В течение каждого дня, проведенного в стране, обыватели могут услышать их песню. Лидеры протеста требуют трудовой реформы в то время, когда слишком сильные преобразования могут погубить наши военные усилия. Мы не можем принять все их требования, и поэтому перед нами стоит небольшой выбор. Вести переговоры, игнорировать или подавлять по полной программе."
- ww1_generic.3.a: "Они скоро устанут шуметь."
- ww1_generic.3.b: "Жандармерия решит эту проблему."
- ww1_generic.3.c: "Небольшая реформа не повредит."
- ww1_generic.4.t: "Жандармерия подавила протест!"
- ww1_generic.4.d: "Жандармерия успешно разогнала протесты. Кровь, запятнавшая улицы, не имеет особого значения, ведь ситуация в целом изменилась полностью в нашу пользу. Будем надеяться, что такое событие больше не повторится."
+ ww1_generic.3.d: "Недовольные нынешними условиями труда рабочие организовали марш по всей стране. Мы просто не можем допустить такого снижения темпов производства, ведь нашим солдатам нужны стабильные поставки снаряжения практически без перебоев. Лидеры этих маршей знают об этом и требуют проведения трудовой реформы, используя все имеющиеся в их руках рычаги. Однако слишком сильные реформы в такое время могут оказаться губительными, даже если мы вернем всех рабочих на их фабрики. Мы не можем принять все их требования, но что мы можем сделать, так это вести переговоры о более мягких условиях, надеясь на успех. Другой вариант - просто надеяться, что все утихнет. И наконец, мы можем послать военную полицию и показать им, что такое настоящий марш."
+ ww1_generic.3.a: "Будем надеяться, что они скоро устанут."
+ ww1_generic.3.b: "Военная полиция позаботится об этом."
+ ww1_generic.3.c: "Небольшая реформа никому не повредит."
+ ww1_generic.4.t: "Победа нашей военной полиции!"
+ ww1_generic.4.d: "Военная полиция успешно разогнала протесты. Кровь, заливающая улицы, имеет гораздо меньшее значение, чем руки, которые теперь снова работают на заводах. Надеюсь, такая ситуация больше никогда не повторится, но теперь мы знаем, что делать, если начнутся беспорядки. Война продолжается."
  ww1_generic.4.a: "Нам повезло."
  ww1_generic.5.t: "Массовые беспорядки!"
- ww1_generic.5.d: "Попытка задержания организаторов протеста потерпела ужасающий провал! Они ушли еще до прибытия нашей полиции, и все оказалось напрасным. Хуже всего то, что они каким-то образом узнали, что мы планируем сделать. По всей стране поднялся рев, возмущенный перспективой ареста. Марши переросли в беспорядки, и вскоре кровь, окрасившая улицы, была не только их, но и нашей. Из-за такого поворота событий простым людям стало казаться, что мы больше не представляем их интересы. Эти некогда мелкие демонстрации теперь угрожают самому сердцу нашей нации и, в свою очередь, нашим военным усилиям."
+ ww1_generic.5.d: "Наши попытки сломить решимость толпы закончились ужасно! Еще больше рабочих покидают свои места, чтобы противостоять развернутой нами военной полиции. Новости распространяются как лесной пожар, и теперь все скоро узнают, что их правительство предпочитает прибегать к насилию, а не вести переговоры с собственным гражданским населением. Марши переходят в беспорядки, и скоро кровь, заливающая улицы, будет не только их, но и нашей. Военные усилия рушатся на наших глазах, и, наверняка, на глазах нашего врага тоже."
  ww1_generic.5.a: "Все разваливается по частям!"
  ww1_generic.6.t: "[From.GetName] убит в бою"
- ww1_generic.6.d:0 "A tragic occurence from an otherwise successful operation, [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] has been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.6.d:0 "A tragic event has occured today. [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] had been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.6.a: "Он хорошо служил своей стране."
- ww1_generic.7.t:0 "[From.GetName] dead from disease."
+ ww1_generic.7.t:0 "[From.GetName] dead from Disease."
  ww1_generic.7.d:0 "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed away. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.8.d:0 "Война закончилась. Наступил мир, но какой ценой? Жизни наших братьев, отцов и сыновей уже не вернуть, но мы можем добиться других уступок в надежде их компенсировать. Перемирие подписано, и мы намерены забрать у проигравших все, что сможем. Наши враги будут жалеть о том времени, когда они встретились с мощью [Root.GetNameDef] и не смогли справиться с этой задачей. \n\nВ этом моде есть перемирие, которое устанавливает ряд событий, распределяющих земли на основе претензий и ядер. Отключение перемирия повлияет на возникновение событий, связанных с последствиями поражения противоборствующей фракции."
  ww1_generic.8.a: "Заключить перемирие."
@@ -38,7 +38,6 @@
  ww1_generic.10.t:0 "Пандемия гриппа"
  ww1_generic.10.d:0 "Вирус гриппа H1N1 распространяется как лесной пожар. Из-за ужасных антисанитарных условий в окопах во время Великой войны эпидемия гриппа заразила тысячи солдат. И сейчас масштабы эпидемии невероятно огромны.\n\nУчитывая события последних нескольких лет, возможно, человечество просто наказано за содеянное. Теперь весь мир должен сосредоточиться на борьбе с гриппом, так как он может стать причиной смерти миллионов людей."
  ww1_generic.10.a:0 "Это катастрофа!"
- ww1_generic.10.b:0 "Мы победили половцев и печенегов, победим и эту инфекцию!"
  ww1_generic.12.t:0 "Голод"
  ww1_generic.12.d:0 "В ряде крупнейших городов страны возникла нехватка продовольствия. Слабая гражданская экономика не выдержала давления, в стране начался голод."
  ww1_generic.12.a:0 "Пусть едят пироги!"
