--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -949,8 +949,8 @@
  CHI_rule_of_the_beiyang_army_desc:0 "Люди взывают к новым опасным политическим партиям, которые утверждают, что несут свободу и раскрепощение. Они только стремятся помешать Китаю стать сильнее! Бэйянская армия позаботится о том, чтобы мы вернулись к нашей былой славе."
  CHI_unite_opposition:0 "Объединение оппозиции"
  CHI_unite_opposition_desc:0 "По мере того, как растет поддержка республики, растет недовольство нами оппозиционных движений. Хотя некоторые их предложения и реформы нежелательны, они могут хорошо подойти республике. Приведение их в соответствие с нашими собственными интересами путем использования некоторых из этих предложений, несомненно, приведет к процветанию."
- CHI_fight_against_militarists:0 "Борьба с сепаратистами"
- CHI_fight_against_militarists_desc:0 "Милитаристы угрожают будущему Республики, и с ними нужно разобраться."
+ CHI_focus_democratic_presidential_election:0 "Democratic Presidential Election"
+ CHI_focus_democratic_presidential_election_desc:0 "We shall decide the future of the Republic, and it must be done by the people's hand."
  CHI_militia_reorganization:0 "Реорганизация милиции"
  CHI_militia_reorganization_desc:0 "Китайская милиция крайне неорганизованна, как и армия."
  CHI_economic_stabilization:0 "Экономическая стабилизация"
@@ -1159,7 +1159,7 @@
  CHI_bribe_northern_governors_desc:0 ""
  CHI_contact_yan_xishan:0 "Contanct Yan Xishan"
  CHI_contact_yan_xishan_desc:0 ""
- CHI_contact_yan_xishan_tt:0 "\n§Y10 Divisions§! will deployed in Shanxi in case of civil war."
+ CHI_contact_yan_xishan_tt:0 "\n§Y4 Divisions§! will deployed in Shanxi in case of civil war."
  CHI_capital_is_nanking:0 "Capital Is Nanking"
  CHI_capital_is_nanking_desc:0 ""
  CHI_national_revolution_army:0 "National Revolutionary Army"
@@ -7428,7 +7428,6 @@
  FRA_ww1_support_yugoslavia: "Поддержать Югославию"
  FRA_ww1_support_yugoslavia_desc:0 "The Serbs were given generous amounts of land with the defeat of the Central Powers, yet these gains will never be recognised by the Bulgarians and Magyrs. We must guarantee their security."
  FRA_ww1_support_romania: "Поддержать Румынию"
- FRA_ww1_support_romania_desc:0 
  FRA_ww1_protect_czechoslovakia: "Поддержать Чехословакию"
  FRA_ww1_protect_czechoslovakia_desc:0 "The young Czechoslovak state, much like its neighbours, is fragile. They would make for a suitable counterweight to future German revanchism. Its imperative we grant them our protection."
  FRA_ww1_little_entente: "Малая Антанта"
@@ -10840,22 +10839,6 @@
 
  FRA_ww1_placate_independents_radicals:0 "Placate Independents Radicals"
  FRA_ww1_placate_independents_radicals_desc:0 "Although they claim to be left-wing, the independent radicals are more of a center-right group, balancing between the left-wing cartel and the disunited right. By promising reforms on workers' rights, such as the reforms proposed by MP Méline, or the revision of the Waldeck Rousseau law, we can secure an alliance on our left flank."
-
- # Portugal
- POR_a_divided_destiny:0 "A Divided Destiny"
- POR_a_divided_destiny_desc:0 "WIP"
- POR_ensure_republican_aid:0 "Ensure Republican Aid"
- POR_ensure_republican_aid_desc:0 "WIP"
- POR_monarchy_till_death:0 "Monarchy Till Death"
- POR_monarchy_till_death_desc:0 "WIP"
- POR_looming_insurrection:0 "Looming Insurrection"
- POR_looming_insurrection_desc:0 ""
- POR_republican_revolt:0 "Republican Revolt"
- POR_republican_revolt_desc:0 ""
- POR_aid_counterrevolutionaries:0 "Aid Counter-Revolutionaries"
- POR_aid_counterrevolutionaries_desc:0 ""
- POR_pillar_of_democracy:0 "Pillar of Democracy"
- POR_pillar_of_democracy_desc:0 ""
 
  # Tooltips
 
