--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -43,6 +43,14 @@
  USA_UK_autonomy_colony_DEF:0 "48 Колоний"
  USA_UK_autonomy_puppet_DEF:0 "$OVERLORDADJ$ие Северо-Американские Территории"
  USA_UK_autonomy_integrated_puppet_DEF:0 "Земля Короля Георга"
+ CYP_UK_autonomy_dominion:0 "Доминион Кипр"
+ CYP_UK_autonomy_colony:1 "Губернаторство Кипр"
+ CYP_UK_autonomy_puppet:0 "Протекторат Кипр"
+ CYP_UK_autonomy_integrated_puppet:0 "$OVERLORDADJ$ий Кипр"
+ CYP_UK_autonomy_dominion_DEF:0 "Доминион Кипр"
+ CYP_UK_autonomy_colony_DEF:1 "Губернаторство Кипр"
+ CYP_UK_autonomy_puppet_DEF:0 "Протекторат Кипр"
+ CYP_UK_autonomy_integrated_puppet_DEF:0 "$OVERLORDADJ$ий Кипр"
  UKR_SOV_communism:1 "Украинская Советская Республика"
  UKR_SOV_communism_DEF:1 "Украинская Советская Республика"
  BLR_SOV_communism_autonomy_puppet:1 "Белорусская ССР"
@@ -1548,8 +1556,7 @@
  CHI_united_democratic_DEF:0 "Китайская Республика" 
  CHI_united_fascism:0 "Реорганизованный Националистический Китай"
  CHI_united_fascism_DEF:0 "Реорганизованный Националистический Китай"
- CHI_united_neutrality:0 "Китай"
- CHI_united_neutrality_DEF:0 "Китай"
+ CHI_united_neutrality_DEF:0 "Китайская Республика"
  CHI_united_communism:0 "Китайская Народная Республика"
  CHI_united_communism_DEF:0 "Китайская Народная Республика"
  CHL_autonomy_dominion:0 "Доминион Чили"
