--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -186,7 +186,7 @@
  SWI:0 "Switzerland"
  SWI_DEF:0 "Switzerland"
  SWI_ADJ:0 "Swiss"
- TUR:0 "Ottoman Empire"
+ TUR:0 "Sublime Ottoman State"
  TUR_DEF:0 "the Sublime Ottoman State"
  TUR_ADJ:0 "Ottoman"
  TUR_communism:0 "Ottoman Socialist State"
