--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5415,6 +5415,9 @@ ROM_king_carols_reign:0 "King Carol's Reign"
 ROM_king_carols_reign_desc:0 "While being a German himself, many consider King Carol the founding father of the Romanian state, and a Romanian in his own right. Under his rule we obtained independence from the Ottomans and are developing into a regional power! Long may he reign!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The people clamor for land reform, and the King has indicated that it is his will as well. The Parliament has gathered to work on negotating such a bill. Hopefully things go the right way."
+ww1_romania.81.t:0 "A Dissapointing Peace Treaty"
+ww1_romania.81.d:0 "BLAH WRITE THIS NOW"
+ww1_romania.81.a:0 "I guess we need TND"
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
